# prc-tools-remix

./: .gitignore  .travis.yml  BUILDING.html  Makefile  Makefile.in  Makefile.maint  Makefile.win32  README  README.adoc  README.reloc  README.shared  README.win32  TODO  aclocal.m4  binutils-2.11.2.palmos.diff  binutils-2.12.1.palmos.diff  binutils-2.12.palmos.diff  binutils-2.13.1.palmos.diff  binutils-2.13.2.1.palmos.diff  binutils-2.14.palmos.diff  binutils-2.7.gnuwin32.diff  binutils-2.7.palmos.diff  binutils-2.9.1.0.6.palmos.diff  binutils-2.9.1.palmos.diff  binutils.diff  build-prc.c  config.sub  configure.in  cygwin-build  egcs-1.1b.palmos.diff  emit-prc.c  gcc-2.7.2.2.gnuwin32.diff  gcc-2.7.2.2.palmos.diff  gcc-2.95.2.palmos.diff  gcc-2.95.3.palmos.diff  gcc-3.2.1.palmos.diff  gcc-3.2.2.palmos.diff  gcc-3.2.palmos.diff  gcc-3.3.1.palmos.diff  gcc-3.3.palmos.diff  (+18 more)
.github/workflows/: build.yaml  setup-palm-os-dev-env.yaml
binutils-2.14/: ChangeLogs.palmos  ChangeLogs.palmos.rej  Makefile.in  config.sub  ltconfig
binutils-2.14/bfd/: Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  archive.c  archive64.c  coff-m68k.c  config.bfd  configure  configure.in  libbfd-in.h  libbfd.h  prc-arm.c  prc-m68k.c  prc.c  prc.h  targets.c
binutils-2.14/binutils/: configure
binutils-2.14/gas/: as.h  configure  configure.in  m68k-parse.c  tc.h
binutils-2.14/gas/config/: m68k-parse.h  m68k-parse.y  obj-coff.h  tc-arm.c  tc-m68k.c
binutils-2.14/gprof/: configure
binutils-2.14/include/coff/: internal.h
binutils-2.14/ld/: Makefile.am  Makefile.in  configure  configure.tgt
binutils-2.14/ld/emultempl/: m68kcoff.em
binutils-2.14/libiberty/: fnmatch.c
binutils-2.14/opcodes/: configure
bootstrap/: Makefile  bootstrap-specs  bootstrap.h  genbootstrap.c  genbootstrap.h  headers.c  hostio.c
ci/: build-deb.sh  build-with-docker.sh
crt/: Make-multi.in  Makefile  Makefile.in  asmcrt0.S  c-decompress.c  crt.h  crt0.c  decompress.S  dreloc.c  entrypoints.S  gcrt0.c  gdb-trap.c  gdbstub.c  hooks.c  new12.cc  nfm.c  origcrt0.c  origcrt0.s  palmos_GLib.c  palmos_GLib.h  scrt0.c  sdktypes.h
doc/: Makefile.in  build-prc.1  build-prc.texi  index.html.in  obj-res.1  palmdev-prep.texi  pilrc.1  prc-tools.texi  txt2bitm.1  version.texi.in
gcc-2.95.3/: Makefile.in  config.guess  config.sub  configure.in
gcc-2.95.3/gcc/: ChangeLog.palmos  Makefile.in  c-lang.c  c-lex.c  c-parse.y  calls.c  cccp.c  collect2.c  config.in  configure  configure.in  cppfiles.c  cstamp-h.in  extend.texi  gcc.c  gcc.texi  integrate.c  libgcc2.c  reload1.c  tree.h  varasm.c  version.c
gcc-2.95.3/libiberty/: Makefile.in  strerror.c
gcc-3.3.1/: .brik  configure.in
gcc-3.3.1/gcc/: Makefile.in  collect2.c  config.gcc  defaults.h  gengtype-lex.c  version.c
gcc-3.3.1/include/: obstack.h
gcc-3.3.1/libstdc++-v3/: configure
gdb-5.3/: Makefile.in  config.sub  ltconfig
gdb-5.3/bfd/: acinclude.m4  aclocal.m4  config.bfd  configure
gdb-5.3/etc/: Makefile.in
gdb-5.3/gdb/: ChangeLog.palmos  Makefile.in  ada-tasks.c  configure  configure.tgt  m68k-tdep.c  remote-palmos.c  stack.c  symfile.c
gdb-5.3/mmalloc/: Makefile.in
gdb-5.3/opcodes/: configure
include/: Makefile  Makefile.in  NewTypes.h  README  Standalone.h  ctype.h  missing-sdk.h  mksystraps.PL  stdlib.h  string.h
libc/: Makefile  Makefile.in  README  abs.c  asmstring.S  atexit.c  bcopy.c  conio.c  ctype.c  intconv.c  ja_strcmp.s  ja_strcpy.s  ja_strlen.s  ja_strncpy.s  jc_strncpy.c  malloc.c  memcmp.c  memcpy.c  memmove.c  memory.S  memscan.c  memset.c  memstring.c  printf.c  random.c  strcat.c  strchr.c  strcmp.c  strcpy.c  string.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strnlen.c  strpbrk.c  strspn.c  strstr.c  strtok.c  strtol.c  (+2 more)
libc/exp/: division.c  string.h  strtonum.S  test.c
libc/include/: errno.h  malloc.h  setjmp.h  stdio.h  stdlib.h  string.h
libc/m68k/: stdlib.h
libm/: Makefile  Makefile.in  chdtrf.c  clogf.c  coshf.c  exp2f.c  fresnlf.c  i1f.c  incbetf.c  j0f.c  libm.exp  log2f.c  mtherr.c  powf.c  powif.c  psif.c  sinhf.c  stdtrf.c  tanf.c
prc-tools-2.3/: BUILDING.html  Makefile.in  README  TODO  binutils  binutils-2.14.palmos.diff  configure  configure.in  gcc  gcc-2.95.3.palmos.diff  gcc295  gdb  gdb-5.3.palmos.diff
prc-tools-2.3/bootstrap/: bootstrap-ui.h  genbootstrap.c  genbootstrap.h  headers.c  hostio.c
prc-tools-2.3/crt/: Makefile.in  crt.h  crt0.c  dreloc.c  hooks.c  palmos_GLib.c  palmos_GLib.h
prc-tools-2.3/doc/: Makefile.in  index.html.in  palmdev-prep.texi  prc-tools.texi
prc-tools-2.3/include/: EntryPoints.h  Makefile.in  MotSyntax.asm  Standalone.h  ctype.h  missing-sdk.h  stdint.h  string.h
prc-tools-2.3/libc/: Makefile.in  abort.c  bzero.c  ctype.c  division.c  printf.c  setjmp.S  vsprintf.c
prc-tools-2.3/libm/: Libm.S  Makefile.in  acoshf.c  airyf.c  asinf.c  asinhf.c  atanf.c  atanhf.c  bdtrf.c  betaf.c  cbrtf.c  chbevlf.c  cmplxf.c  constf.c  dawsnf.c  drand.c  ellief.c  ellikf.c  ellpef.c  ellpjf.c  ellpkf.c  exp10f.c  expf.c  expnf.c  facf.c  fdtrf.c  floorf.c  gammaf.c  gdtrf.c  hyp2f1f.c  hypergf.c  i0f.c  igamf.c  igamif.c  incbet.c  incbif.c  ivf.c  j1f.c  jnf.c  jvf.c  (+28 more)
prc-tools-2.3/tools/: Makefile.in  binres.cpp  binres.hpp  build-prc.cpp  def.h  def.l  def.y  dirutils.c  palmdev-prep.c  pfd.hpp  pfdheader.c  pfdheader.h  pfdio.hpp  pfdtime.c  stubgen.c  trapfilt.c  utils.c  utils.h
tools/: Makefile  Makefile.in  README  binres.cpp  binres.hpp  build-binary-package-with-docker.sh  build-binary-package.sh  build-deb-with-docker.sh  build-deb.sh  build-macos-rosetta.sh  build-prc.cpp  build.sh  config.h  config.h.in  configure.in  def.h  def.l  def.y  dirutils.c  gentrapnumbers.cpp  install-pilrc.sh  install-prc-tools-remix.sh  multigen.c  obj-res.cpp  palmdev-prep.c  pfd.cpp  pfd.hpp  pfdheader.c  pfdheader.h  pfdio.hpp  pfdtime.c  sdkfind.c  setup-palm-os-dev-env-deb.sh  setup-palm-os-dev-env.sh  setup-palm-os-sdk.sh  stubgen.c  trapfilt.c  utils.c  utils.h
tools/hello-world-app/: build.sh  hello.c
tools/templates/: codify.sed  glib-stubs.c  multicode.s  syslib-dispatch.s
(+59 files in other folders)
